tools/sddl2/assembler/tests/fail/push_u32_missing_param.asm
# EXPECT-ERROR: requires 1 parameter
push.u32
halt
